--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
     <nav class="navigation">
         <ul class="navigation__list">
             <li class="navigation__item">
-                <a href="#"><img class="navigation__image" src="icons/bell.png" alt="bell1" > </a>
+                <a href="#"><img class="navigation__image" src="icons/bell.png" alt="" > </a>
             </li>
             <li class="navigation__item">
-                <a href="#"><img class="navigation__image" src="icons/bell.png" alt="bell2" ></a>
+                <a href="#"><img class="navigation__image" src="icons/bell.png" alt="" ></a>
             </li>
             <li class="navigation__item navigation__item-modal">
                 <input  class="navigation__check_input" type="checkbox" name="modal" id="modal" >
@@ -52,10 +52,10 @@
                 </div> 
             </li>
             <li  class="navigation__item"> 
-                <a href="#"><img class="navigation__image" src="icons/bell.png" alt="bell3"></a> 
+                <a href="#"><img class="navigation__image" src="icons/bell.png" alt=""></a> 
             </li>
             <li  class="navigation__item">
-                <a href="#"><img class="navigation__image" src="icons/bell.png" alt="bell4"></a> 
+                <a href="#"><img class="navigation__image" src="icons/bell.png" alt=""></a> 
             </li>
         </ul>
     </nav>
